gadjid/src/snapshots/gadjid__test__small-CPDAG18-vs-CPDAG19.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-18
g_guess: 10-node-CPDAG-19
ancestor_aid:
  - 0.5666666666666667
  - 51
oset_aid:
  - 0.5666666666666667
  - 51
parent_aid:
  - 0.5666666666666667
  - 51
shd:
  - 0.3333333333333333
  - 15
t:
  - 2
  - 4
  - 6
  - 9
y: 8
z:
  - 0
  - 3
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 0
  - 1
  - 3
  - 5
  - 7
  - 8
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 8
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 3
  - 5
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 3
  - 5
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 3
  - 5
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 3
  - 5
  - 7
  - 8
