gadjid/src/snapshots/gadjid__test__small-CPDAG19-vs-CPDAG10.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-19
g_guess: 10-node-CPDAG-10
ancestor_aid:
  - 0.43333333333333335
  - 39
oset_aid:
  - 0.43333333333333335
  - 39
parent_aid:
  - 0.5
  - 45
shd:
  - 0.3111111111111111
  - 14
t:
  - 0
  - 1
  - 2
  - 5
  - 8
  - 9
y: 6
z:
  - 7
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 3
  - 4
  - 6
  - 7
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 6
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 6
  - 7
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 3
  - 4
  - 6
  - 7
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 3
  - 4
  - 6
  - 7
not_validly_adjusted_for_in_g_guess_by_z:
  - 3
  - 4
  - 6
  - 7
