gadjid/src/snapshots/gadjid__test__small-CPDAG5-vs-CPDAG6.snap
---
source: src/lib.rs
expression: "test(&format!(\"200{:0>2}.CPDAG-10\", true_id),\n    &format!(\"200{:0>2}.CPDAG-10\", guess_id))"
---
g_true: 20005.CPDAG-10
g_guess: 20006.CPDAG-10
ancestor_aid:
  - 0.4888888888888889
  - 44
oset_aid:
  - 0.4888888888888889
  - 44
parent_aid:
  - 0.6888888888888889
  - 62
shd:
  - 0.35555555555555557
  - 16
T:
  - 3
  - 4
  - 7
NAM:
  - 0
  - 2
  - 8
  - 9
Y: 9
random_adj:
  - 0
  - 1
  - 2
proper_ancestors:
  - 9
oset: []
possible_descendants:
  - 0
  - 2
  - 3
  - 4
  - 7
  - 8
  - 9
parent_adjustment_NVA:
  - 0
  - 1
  - 2
  - 5
  - 6
  - 8
  - 9
ancestor_adjustment_NVA:
  - 0
  - 1
  - 2
  - 5
  - 6
  - 8
  - 9
nondescendant_adjustment_NVA:
  - 0
  - 1
  - 2
  - 5
  - 6
  - 8
  - 9
oset_adjustment_NVA:
  - 0
  - 1
  - 2
  - 5
  - 6
  - 8
  - 9
empty_adjustment_NVA:
  - 0
  - 1
  - 2
  - 5
  - 6
  - 8
  - 9
random_Z_adjustment_NVA:
  - 0
  - 1
  - 2
