gadjid/src/snapshots/gadjid__test__small-DAG01-vs-DAG02.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20001.DAG-10
g_guess: 20002.DAG-10
ancestor_aid:
  - 0.2222222222222222
  - 20
oset_aid:
  - 0.25555555555555554
  - 23
parent_aid:
  - 0.34444444444444444
  - 31
shd:
  - 0.5111111111111111
  - 23
t:
  - 0
  - 2
  - 4
  - 5
  - 7
  - 8
  - 9
y: 1
z:
  - 3
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 2
  - 3
  - 4
  - 6
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 3
  - 6
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 3
  - 6
not_validly_adjusted_for_in_g_guess_by_z:
  - 3
  - 6
