gadjid/src/snapshots/gadjid__test__small-DAG02-vs-DAG03.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20002.DAG-10
g_guess: 20003.DAG-10
ancestor_aid:
  - 0.2777777777777778
  - 25
oset_aid:
  - 0.2777777777777778
  - 25
parent_aid:
  - 0.4222222222222222
  - 38
shd:
  - 0.4222222222222222
  - 19
t:
  - 0
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
y: 1
z:
  - 2
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
  - 2
oset_for_t_onto_y_in_g_guess:
  - 2
  - 3
  - 7
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 2
  - 5
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 2
  - 3
  - 7
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 2
not_validly_adjusted_for_in_g_guess_by_z:
  - 2
